# Intern-Cohort-AI-Tasks

./: .gitignore  .gitmodules  README.md  vercel.json
.github/workflows/: ci.yml
Frontend/: README.md  package-lock.json  package.json
Frontend/client/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/client/public/: tree-snapshot.json
Frontend/client/src/: App.jsx  api.js  index.css
Frontend/server/: index.js  package-lock.json  package.json
agent-capability-explorer/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
agent-capability-explorer/scripts/: generate-data.mjs  scaffold-app.mjs
agent-capability-explorer/src/: index.css
agent-capability-explorer/src/hooks/: useCatalog.ts
agent-capability-explorer/src/pages/: AgentDetailPage.tsx  DocViewerPage.tsx  HomePage.tsx  OutputsPage.tsx  ProgressPage.tsx  TimelinePage.tsx
agent-capability-explorer/src/utils/: catalog.ts  cn.ts
extras/: README.md
extras/frontend/agent-capability-explorer/: README.md  index.html  package-lock.json
tasks/: README.md
tasks/Advanced/: README.md
tasks/Advanced/A1/: README.md  parallel-plan-a1-demo.md  parallel-task-splitter.md  run-2026-06-16T21-35-19-675Z.md
tasks/Advanced/A2/: README.md  parallel-run-a1-demo.md  parallel-worktree-executor.md
tasks/Advanced/A3/: README.md
tasks/Advanced/A3/rust-scorer/: Cargo.toml
tasks/Advanced/A3/rust-scorer/src/: lib.rs  main.rs
tasks/Advanced/A3/rust-scorer/tests/: integration_test.rs
tasks/Basics/: README.md
tasks/Infra and DevOps/: README.md
(+290 files in other folders)
