[package]
name = "fraud-scorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "fraud_scorer"
path = "src/lib.rs"

[[bin]]
name = "fraud-scorer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
